syntax = "proto3";

package proto_bill.v1;

option go_package = "github.com/ei-sugimoto/tatekae/api/gen/proto_bill/v1;billv1";

service BillService {
  rpc Create(BillServiceCreateRequest) returns (BillServiceCreateResponse);
  rpc SumarizeByProject(BillServiceSumrizeByProjectRequest) returns (BillServiceSumrizeByProjectResponse);
  rpc List(BillServiceListRequest) returns (BillServiceListResponse);
}

message BillServiceCreateRequest {
  int32 project_id = 1;
  int32 src_user_id = 2;
  int32 dst_user_id = 3;
  int32 price = 4;
}

message Bill {
  int32 id = 1;
  int32 price =2;
  string src_user_name = 3;
  string dst_user_name = 4;
}


message BillServiceCreateResponse {
  int32 id = 1;
  int32 price = 2;
  int32 src_user_id = 3;
  int32 dst_user_id = 4;
  int32 project_id = 5;
}

message BillServiceSumrizeByProjectRequest {
  int32 project_id = 1;
}

message BillServiceSumrizeByProjectResponse {
  repeated SumrizeBill bills = 1;
}

message SumrizeBill {
    string src_user_name = 1;
    string dst_user_name = 2;
    int32 price = 3;
}

message BillServiceListRequest {
  int32 project_id = 1;

}

message BillServiceListResponse {
  repeated Bill bills = 1;
}
